[package]
name = "consalign"
version = "0.1.0"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Structural Alignment-aware Prediction Tool for RNAs"
repository = "https://github.com/heartsh/consalign"
readme = "README.md"
keywords = ["bioinformatics", "rna", "sequence-alignment"]
license = "MIT"

[dependencies]
num_cpus = "1.0"
crossbeam = "0.8"
consprob-trained = {path = "../consprob-trained"}
petgraph = "0.6"
rand = "0.8"

[lib]
path = "src/lib.rs"
name = "consalign"
