[package]
name = "consalign"
version = "0.1.6"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "Trainable RNA Structural Aligner"
repository = "https://github.com/heartsh/consalign"
readme = "README.md"
keywords = ["bioinformatics", "rna", "structural-alignment"]
license = "MIT"

[dependencies]
num_cpus = "1.0"
crossbeam = "0.8"
consprob-trained = "0.1"
petgraph = "0.6"

[lib]
path = "src/lib.rs"
name = "consalign"
