[package]
name = "consalign"
version = "0.1.8"
authors = ["heartsh <heartsh@heartsh.io>"]
description = "RNA Structural Aligner Based on Transfer-learning and Thermodynamic Ensemble Model"
repository = "https://github.com/heartsh/consalign"
readme = "README.md"
keywords = ["bioinformatics", "rna", "structural-alignment"]
license = "MIT"

[dependencies]
num_cpus = "1.0"
crossbeam = "0.8"
consprob-trained = "0.1"
petgraph = "0.6"

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"
name = "consalign"

[[bench]]
name = "benches"
harness = false
